# sports-injury-ner

./: .gitignore  CHANGELOG.md  README.md  dvc.md  dvc.yaml  justfile  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
config/: keywords.yaml
docs/: development.md
plans/: implementation_status_final.md  tuning-plans.md
scripts/: update_model_card.py
src/: config.py
src/scripts/: scripts.py  update_model_card.py
src/sportsinjuryner/: config.py
src/sportsinjuryner/inference/: predict.py
src/sportsinjuryner/loaders/: feedsreader.py
src/sportsinjuryner/train/: 00_load_injuries_data.py  01_convert_csv_to_ner_data.py  01a_reapply_keywords.py  02_validate_ner_data.py  03_train_injury_ner.py  04_active_learning.py  05_error_analysis.py  al_utils.py  constants.py  main.py  ner_utils.py
src/train/: 00_load_injuries_data.py  01_convert_csv_to_ner_data.py  02_validate_ner_data.py  03_train_injury_ner.py  04_reapply_keywords.py  PROJECT_GOAL.md  constants.py  ner_utils.py
tests/: test_al_utils.py  test_data_sources.py  test_inference.py  test_ner_utils.py
